Fixed spacing of everything pushed to the right and horizontal scrollbar

--- a/index.css
+++ b/index.css
@@ -48,10 +48,10 @@ ul {
 
 .mainContent {
   text-align: left;
-  margin-left: 20%;
-  margin-right: 20%;
   font-size: 20px;
-  width: 1400px;
+  width: 100%;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .video {
@@ -72,11 +72,11 @@ p {
   float: left;
 }
 
-h1, h2, h3, h4{
+h1, h2, h3, h4 {
     font-weight: bolder;
 }
 
-#listTim{
+#listTim {
     list-style-type: circle;
 }
 
@@ -84,9 +84,9 @@ li {
     font-weight: bolder;
 }
 
-.panel.panel-default {
-  left: 0;
-  right: 0;
+.container {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 /*Panel tabs*/
@@ -126,10 +126,7 @@ li {
         color: white;
         border-bottom-color: transparent;
     }
-<<<<<<< HEAD
-=======
 
 #spacing {
     margin-top: 140px;
 }
->>>>>>> ab2424f4d52a2955a85db03e3e8c4b2f2cf7360b
